@@ -22,7 +22,9 @@ TESTS = $(unit_tests)
 check_SCRIPTS = testwrapper.sh
 unit_tests = test_mylist test_myset test_sid test_relvbr \
 	test_release test_sid_list test_rel_list test_sccsdate \
-	test_delta test_stack test_delta-table test_encoding
+	test_delta test_stack test_delta-table test_encoding \
+	test_encoding2
+
 check_PROGRAMS = $(unit_tests) test_bigfile
 
 test_mylist_SOURCES = test_mylist.cc
@@ -37,6 +39,7 @@ test_delta_SOURCES = test_delta.cc
 test_stack_SOURCES = test_stack.cc
 test_delta_table_SOURCES = test_delta-table.cc
 test_encoding_SOURCES = test_encoding.cc
+test_encoding2_SOURCES = test_encoding2.cc
 test_bigfile_SOURCES = test_bigfile.cc
 test_bigfile_LDADD = ../libcssc.a
 
